[jekyll] fixed css to workaround rouge extra wrapping

--- a/_scss/components/_syntax.scss
+++ b/_scss/components/_syntax.scss
@@ -1,7 +1,7 @@
 // Solarized Light Pygments CSS / Jekyll
 // https://gist.github.com/edwardhotchkiss/2005058
 
-.highlight { 
+pre.highlight { 
   border: 1px solid $border-color;
   border-radius: 3px;
   padding: $spacing-s $spacing-s;
@@ -14,13 +14,13 @@
     overflow: visible;
   }
 }
- 
+
 code {
   font-family: 'Courier', monospace;
   font-size: 100%;
   line-height: 1.5;
 }
- 
+
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: #93A1A1 } /* Error */
 .highlight .g { color: #93A1A1 } /* Generic */
